@@ -30,9 +30,6 @@ Print the compiler flags that are necessary to compile a program that uses
 .B  \-\-plugindir
 Print the directory where \fIlibxine\fP plugins are stored/expected.
 .TP 8
-.B  \-\-skindir
-Print the directory in which \fIlibxine\fP skins are stored/expected.
-.TP 8
 .B  \-\-prefix=PREFIX
 If specified, use PREFIX instead of the installation prefix that \fIxine-lib\fP
 was built with when computing the output for the \-\-cflags and
